[package]
name = "rbsg-backend"
version = "0.0.1"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/rbsg"
homepage = "https://github.com/Bernd-L/rbsg#readme"
readme = "README.md"
documentation = "https://docs.rs/rbsg"
description = "A backend for RBSG"
include = ["/README.md", "../LICENSE.md", "/Cargo.toml", "/Cargo.lock", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10" }
rusted_cypher = "1.1.0"
