[package]
name = "rbsg-frontend"
version = "0.0.0"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/rbsg"
homepage = "https://github.com/Bernd-L/rbsg#readme"
readme = "README.md"
documentation = "https://docs.rs/rbsg"
description = "A frontend for RBSG"
include = ["/README.md", "../LICENSE.md", "/Cargo.toml", "/Cargo.lock", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
